--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
-:root {
+@import url(header.css);
+
+:root{
     --cor-de-fundo: #EBECEE;
+    --branco: #FFFF;
 }
-
-body {
-background-color: var(--cor-de-fundo);
-}
-
-h1 {
-    background-color: white;
+body{
+    background-color: var(--cor-de-fundo);
 }
