--- a/header.css
+++ b/header.css
@@ -6,3 +6,17 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+.cabeçalho {
+    background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+.container {
+    display: flex;
+    align-items: center;
+}
+.container__imagem {
+    padding: 1em;
+}
