--- a/header.css
+++ b/header.css
@@ -2,10 +2,11 @@
     width: 24px;
     height: 24px;
     display: inline-block;
-    background-image: url(Menu.svg");
+    background-image: url("../img/Menu.svg");
     background-repeat: no-repeat;
     background-position: center;
 }
+
 .cabeçalho {
     background-color: var(--branco);
     display: flex;
@@ -13,10 +14,22 @@
     align-items: center;
     position: relative;
 }
+
 .container {
     display: flex;
     align-items: center;
 }
+
 .container__imagem {
     padding: 1em;
+}
+
+.lista-menu {
+    display: none;
+    position: absolute;
+    top:100%;
+}
+
+.container__botao:checked ~ .lista-menu {
+    display: block;
 }
