--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
-@import url("styles/header.css");
+@import url(header.css);
 
-:root {
+:root{
     --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
+    --branco: #FFFF;
 }
-
-body {
+body{
     background-color: var(--cor-de-fundo);
 }
